# spider

./: .gitignore  Cargo.toml  README.md  deploy.sh  index.html  index_nocanvas.html
assets/models/: boat_p1.glb  boat_p2.glb  boat_p3.glb  cup.glb  tachikoma.glb
assets/shaders/: racing_line.wgsl  simu.wgsl
src/: background.rs  global_state.rs  main.rs  simu.rs
src/background/: mod.rs  twister.rs
src/material/: mod.rs  parallax_material.rs  racing_line_material.rs  wavy_material.rs
src/spider/: data.rs  mod.rs  physics.rs
src/track/: data.rs  mod.rs  piece.rs
src/ui/: checkbox.rs  colors.rs  combobox.rs  game_done_screen.rs  mod.rs  track_selection_menu.rs
src/ui_/: consts.rs  game_done_screen.rs  mod.rs  track_selection_menu.rs
src/vehicle/: collision.rs  data.rs  mod.rs  physics.rs
