[package]
name = "spider"
edition = "2024"
version = "0.1.0"
authors = ["pierre.gueth@gmail.com"]

[dependencies]
env_logger = "0.11.7"
bytemuck = "1.22.0"
wgpu = "24.0.0"
log = { version = "0.4.21", features = ["std"] }
clap = { version = "4", features = ["derive"] }
bevy = { version = "0.16.1", features = ["webgpu", "web"] }
priority-queue = "2.5.0"
kd-tree = { version = "0.6.1", features = ["nalgebra"] }
typenum = "1.18.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
pollster = { version = "0.4.0", features = ["macro"] }

# [target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
# plotters = "0.3.3"
# png = "0.17.16"
# regex = "1.11.1"
